// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom mutation using custom type argument 1`] = `
"input MutateWithCustomTypeArgCustomArgInput
{
  field: String
}

type CustomArgType 
{
  field: String
}

type Mutation {
  mutateWithCustomTypeArg(customArg: MutateWithCustomTypeArgCustomArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom mutation using enum ref in nested custom type 1`] = `
"enum SomeEnum {
  VALUE1
  VALUE2
}

input MutateWithNestedEnumRefNestedArgInput
{
  field: String
  enumField: SomeEnum
}

type NestedCustomType 
{
  field: String
  enumField: SomeEnum
}

type Mutation {
  mutateWithNestedEnumRef(nestedArg: MutateWithNestedEnumRefNestedArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom mutation using ref argument 1`] = `
"input MutationWithRefArgRefArgInput
{
  field: String
}

type RefArgType 
{
  field: String
}

type Mutation {
  mutationWithRefArg(refArg: MutationWithRefArgRefArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom operation using enum directly in arguments 1`] = `
"enum DirectEnumQueryStatus {
  PENDING
  APPROVED
  REJECTED
}

type Query {
  directEnumQuery(status: DirectEnumQueryStatus): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom operation using enum in inline custom type arguments 1`] = `
"input InlineEnumQueryInputInput
{
  name: String
  status: InlineEnumQueryInputInputStatus
}

enum InlineEnumQueryInputInputStatus {
  ACTIVE
  INACTIVE
}

type Query {
  inlineEnumQuery(input: InlineEnumQueryInputInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom operation using enum in referenced custom type arguments 1`] = `
"input RefEnumQueryInputInput
{
  name: String
  status: RefEnumQueryInputInputStatus
}

enum RefEnumQueryInputInputStatus {
  NEW
  IN_PROGRESS
  COMPLETED
}

type StatusInput 
{
  name: String
  status: StatusInputStatus
}

enum StatusInputStatus {
  NEW
  IN_PROGRESS
  COMPLETED
}

type Query {
  refEnumQuery(input: RefEnumQueryInputInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom query using custom type argument 1`] = `
"input QueryWithCustomTypeArgCustomArgInput
{
  field: String
}

type CustomArgType 
{
  field: String
}

type Query {
  queryWithCustomTypeArg(customArg: QueryWithCustomTypeArgCustomArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom query using enum ref as argument 1`] = `
"enum SomeEnum {
  OPTION1
  OPTION2
}

type Query {
  queryWithEnumRefArg(enumArg: SomeEnum): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform custom operations with custom types and refs Schema with custom query using ref argument 1`] = `
"input QueryWithRefArgRefArgInput
{
  field: String
}

type RefArgType 
{
  field: String
}

type Query {
  queryWithRefArg(refArg: QueryWithRefArgRefArgInput): String @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w required arg and enum 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

enum LikePostReactionType {
  :shipit:
  :risitas:
}

type Mutation {
  likePost(postId: String!, reactionType: LikePostReactionType): Post 
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference & auth 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom Mutation w string function reference 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Mutation {
  likePost(postId: String!): Post @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline boolean return type 1`] = `
"type Mutation {
  likePost(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline custom return type 1`] = `
"type LikePostReturnType
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Mutation {
  likePost(postId: String!): LikePostReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline datetime return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline float return type 1`] = `
"type Mutation {
  likePost(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline integer return type 1`] = `
"type Mutation {
  likePost(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline json return type 1`] = `
"type Mutation {
  likePost(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom mutation w inline string return type 1`] = `
"type Mutation {
  likePost(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline boolean return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Boolean 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline custom enum return type 1`] = `
"enum GetPostStatusReturnType {
  draft
  pending
  approved
}

type Query {
  getPostStatus(postId: String!): GetPostStatusReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline custom return type 1`] = `
"type GetPostDetailsReturnType
{
  stringField: String
  intField: Int
  floatField: Float
  boolField: Boolean
  datetimeField: AWSDateTime
  jsonField: AWSJSON
}

type Query {
  getPostDetails(postId: String!): GetPostDetailsReturnType 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline datetime return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSDateTime 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline float return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Float 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline integer return type 1`] = `
"type Query {
  getPostDetails(postId: String!): Int 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline json return type 1`] = `
"type Query {
  getPostDetails(postId: String!): AWSJSON 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w inline string return type 1`] = `
"type Query {
  getPostDetails(postId: String!): String 
}"
`;

exports[`CustomOperation transform dynamo schema Custom query w referenced enum return type 1`] = `
"enum PostStatus {
  draft
  pending
  approved
}

type Query {
  getPostStatus(postId: String!): PostStatus 
}"
`;

exports[`CustomOperation transform dynamo schema Generation route does not require a handler even when auth is defined 1`] = `
"type Recipe @aws_api_key
{
  ingredients: [String]
}

type Query {
  makeRecipe(content: String): Recipe @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route should create directive with inference configuration 1`] = `
"type Recipe @aws_api_key
{
  ingredients: [String]
}

type Query {
  makeRecipe(content: String): Recipe @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!", inferenceConfiguration: { temperature: 0.5, maxTokens: 100, topP: 1 }) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route with empty inference configuration should not pass argument along to directive 1`] = `
"type Query {
  makeRecipe(content: String): String @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Generation route with subset of inference configuration should create directive arg 1`] = `
"type Query {
  makeRecipe(content: String): String @generation(aiModel: "anthropic.claude-3-haiku-20240307-v1:0", systemPrompt: "Hello, world!", inferenceConfiguration: { temperature: 0.5 }) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of custom type with array modifier 1`] = `
"type PostCustomType @aws_api_key
{
  title: String
}

type Mutation {
  listPosts: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: [PostCustomType] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: [PostCustomType] @function(name: "myFunc") @aws_subscribe(mutations: ["listPosts"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema Schema w model, custom query, mutation, and subscription and ref of model with array modifier 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  listPosts: [Post] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: [Post] @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription where .for() resource has a CustomType return type 1`] = `
"type CreateCustomTypePostReturnType @aws_api_key
{
  title: String!
}

type Mutation {
  createCustomTypePost: CreateCustomTypePostReturnType @function(name: "createCustomTypePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikeCustomTypePost: CreateCustomTypePostReturnType @function(name: "onCreateCustomTypePost") @aws_subscribe(mutations: ["createCustomTypePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription where .for() resource has a scalar return type 1`] = `
"type Mutation {
  likePost: String @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: String @function(name: "onLikePost") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with Model source & custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikeOrUpdatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost", "updatePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with custom mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "likePost") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model multiple mutation sources 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Subscription {
  onAnyPostMutation: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost", "updatePost", "deletePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema custom subscriptions Custom subscription with model single mutation source 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth and model ref works 1`] = `
"type Post @model @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type GetPostDetailsReturnType @aws_api_key
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_api_key
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with auth works 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.custom a.handler.custom with multiple supported auth modes 1`] = `
"type Post @model @auth(rules: [{allow: private}])
{
  title: String
}

type Query {
  customQuery: String @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["groupA", "groupB"])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "FnGetPostDetails") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction async - async 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails", invocationType: Event) @function(name: "FnGetPostDetails2", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction async - sync 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "FnGetPostDetails", invocationType: Event) @function(name: "FnGetPostDetails2") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction event invocation 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function defineFunction sync - async 1`] = `
"type EventInvocationResponse @aws_cognito_user_pools
{
  success: Boolean!
}

type Query {
  getPostDetails: EventInvocationResponse @function(name: "FnGetPostDetails") @function(name: "FnGetPostDetails2", invocationType: Event) @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function pipeline / mix 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @function(name: "FnGetPostDetails2") @function(name: "FnGetPostDetails3") @function(name: "myFunc2") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.function string 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @function(name: "myFunc") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql escapes quotes 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE status = \\"active\\";") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.inlineSql works 1`] = `
{
  "customSqlDataSourceStrategies": [
    {
      "fieldName": "getPostDetails",
      "typeName": "Query",
    },
  ],
  "functionSchemaAccess": [],
  "functionSlots": [],
  "jsFunctions": [],
  "lambdaFunctions": {},
  "schema": "type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(statement: "SELECT * from TESTTABLE;") @auth(rules: [{allow: private}])
}",
}
`;

exports[`CustomOperation transform dynamo schema handlers a.handler.sqlReference works 1`] = `
"type GetPostDetailsReturnType @aws_cognito_user_pools
{
  
}

type Query {
  getPostDetails: GetPostDetailsReturnType @sql(reference: "./testQueryName") @auth(rules: [{allow: private}])
}"
`;

exports[`CustomOperation transform sql schema Schema w model, custom query, mutation, and subscription 1`] = `
"type Post @model(timestamps: null) @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["likePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`CustomOperation transform sql schema schema.add* will not accept custom operations of incompatible types 1`] = `
"type Post @model(timestamps: null) @auth(rules: [{allow: public, provider: apiKey}])
{
  title: String
}

type Mutation {
  likePost(postId: String): Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Query {
  getLikedPost: Post @function(name: "myFunc") @auth(rules: [{allow: public, provider: apiKey}])
}

type Subscription {
  onCreatePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["createPost"]) @auth(rules: [{allow: public, provider: apiKey}])
  onLikePost: Post @function(name: "myFunc") @aws_subscribe(mutations: ["updatePost"]) @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance implicit custom type inherits auth rules from referencing op 1`] = `
"type MyQueryReturnType @aws_api_key
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: MyQueryReturnType @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance nested custom types inherit auth rules from top-level referencing op 1`] = `
"type MyQueryReturnType @aws_api_key
{
  fieldA: String
  fieldB: Int
  nestedCustomType: MyQueryReturnTypeNestedCustomType
}

type MyQueryReturnTypeNestedCustomType @aws_api_key
{
  nestedA: String
  nestedB: String
  grandChild: MyQueryReturnTypeNestedCustomTypeGrandChild
}

type MyQueryReturnTypeNestedCustomTypeGrandChild @aws_api_key
{
  grandA: String
  grandB: String
}

type Query {
  myQuery: MyQueryReturnType @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance op returns top-level custom type with 1 auth mode 1`] = `
"type QueryReturn @aws_api_key
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
}"
`;

exports[`custom operations + custom type auth inheritance op returns top-level custom type with all supported auth modes 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools @aws_cognito_user_pools(cognito_groups: ["admin", "superAdmin"]) @aws_iam
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey},
  {allow: private},
  {allow: groups, groups: ["admin", "superAdmin"]},
  {allow: public, provider: iam},
  {allow: private, provider: iam}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type with nested implicit and explicit custom types inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: QueryReturnNested
}

type LevelTwo @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type QueryReturnNested @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelTwo
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;

exports[`custom operations + custom type auth inheritance top-level custom type with nested top-level custom types inherits combined auth rules from referencing ops 1`] = `
"type QueryReturn @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelOne
}

type LevelOne @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
  nested: LevelTwo
}

type LevelTwo @aws_api_key @aws_cognito_user_pools
{
  fieldA: String
  fieldB: Int
}

type Query {
  myQuery: QueryReturn @function(name: "myFn") @auth(rules: [{allow: public, provider: apiKey}])
  myMutation: QueryReturn @function(name: "myFn") @auth(rules: [{allow: private}])
}"
`;
